@@ -55,6 +55,7 @@ public abstract class GenericModelImpl implements GenericModel {
     private Pos position;
     private double globalRotation;
     private double pitch;
+    private float globalScale = 1;
 
     protected record ModelBoneInfo(String name, Point pivot, Point rotation, JsonArray cubes, GenericModel model,
                                    float scale) {
@@ -131,6 +132,7 @@ public abstract class GenericModelImpl implements GenericModel {
     public void init(@Nullable Instance instance, @NotNull Pos position, float scale) {
         this.instance = instance;
         this.position = position;
+        this.globalScale = scale;
 
         JsonObject loadedModel = ModelLoader.loadModel(getId());
         this.setGlobalRotation(position.yaw());
@@ -151,6 +153,7 @@ public abstract class GenericModelImpl implements GenericModel {
 
     @Override
     public void setGlobalScale(float scale) {
+        this.globalScale = scale;
         for (ModelBone modelBonePart : this.parts.values()) {
             modelBonePart.setGlobalScale(scale);
         }
@@ -184,6 +187,11 @@ public abstract class GenericModelImpl implements GenericModel {
 
             Point boneRotation = ModelEngine.getPos(bone.getAsJsonObject().get("rotation")).orElse(Pos.ZERO).mul(-1, -1, 1);
             Point pivotPos = ModelEngine.getPos(pivot).orElse(Pos.ZERO).mul(-1, 1, 1);
+
+            if (bone.getAsJsonObject().has("locator")) { // position-only locator bone (see getLocator)
+                parts.put(name, new ModelBoneVFX(pivotPos, name, boneRotation, this, scale));
+                continue;
+            }
 
             boolean found = false;
             for (Map.Entry<Predicate<String>, Function<ModelBoneInfo, @Nullable ModelBone>> entry : this.boneSuppliers.entrySet()) {
@@ -231,6 +239,18 @@ public abstract class GenericModelImpl implements GenericModel {
         return instance;
     }
 
+    private Entity owner;
+
+    @Override
+    public Entity getOwner() {
+        return owner;
+    }
+
+    @Override
+    public void setOwner(Entity owner) {
+        this.owner = owner;
+    }
+
     public void setState(String state) {
         for (ModelBoneImpl part : viewableBones) {
             part.setState(state);
@@ -242,6 +262,7 @@ public abstract class GenericModelImpl implements GenericModel {
     }
 
     public void draw() {
+        net.worldseed.multipart.model_bones.ModelBoneImpl.beginDrawFrame();
         for (ModelBone modelBonePart : this.parts.values()) {
             if (modelBonePart.getParent() == null)
                 modelBonePart.draw();
@@ -262,6 +283,30 @@ public abstract class GenericModelImpl implements GenericModel {
         ModelBone found = this.parts.get(name);
         if (found == null) return null;
         return found.getPosition();
+    }
+
+    @Override
+    public void setBoneVisible(String boneName, boolean visible) {
+        ModelBone bone = this.parts.get(boneName);
+        if (bone != null) bone.setVisible(visible);
+    }
+
+    @Override
+    public Point getLocator(String name) {
+        ModelBone found = this.parts.get(name);
+        return found == null ? null : found.getPosition();
+    }
+
+    @Override
+    public Point getBonePoint(String boneName, Point geometryPoint) {
+        ModelBone found = this.parts.get(boneName);
+        if (found == null || geometryPoint == null) return null;
+        // Generated geometry is quarter-scale and mirrors Blockbench X when bones load.
+        Point local = new Vec(-geometryPoint.x(), geometryPoint.y(), geometryPoint.z());
+        Point animated = found.applyTransform(local).div(4).mul(globalScale);
+        Point world = ModelMath.rotate(animated,
+                new Vec(0, 180 - getGlobalRotation(), 0));
+        return world.add(getPosition());
     }
 
     @Override
@@ -308,7 +353,7 @@ public abstract class GenericModelImpl implements GenericModel {
     }
 
     @Override
-    public void sendPacketsToViewers(@NotNull Collection<SendablePacket> packets) {
+    public void sendPacketsToViewers(@NotNull Collection<? extends SendablePacket> packets) {
         for (Player viewer : this.viewers) {
             for (SendablePacket packet : packets) {
                 viewer.sendPacket(packet);
@@ -370,7 +415,9 @@ public abstract class GenericModelImpl implements GenericModel {
 
     @Override
     public @NotNull Set<@NotNull Player> getViewers() {
-        return Set.copyOf(this.viewers);
+        // live unmodifiable view (viewers is a concurrent key-set, safe to iterate) instead of a fresh
+        // Set.copyOf on every call — the per-tick metadata flush of every bone reads this.
+        return java.util.Collections.unmodifiableSet(this.viewers);
     }
 
     @Override
@@ -493,14 +540,26 @@ public abstract class GenericModelImpl implements GenericModel {
     }
 
     @Override
-    public Set<Entity> getPassengers(String name) {
+    public List<Entity> getPassengers(String name) {
         if (this.parts.get(name) instanceof RideableBone rideable) return rideable.getPassengers();
-        return Collections.emptySet();
+        return Collections.emptyList();
     }
 
     @Override
     public void bindNametag(String name, Entity nametag) {
         if (this.parts.get(name) instanceof ModelBoneNametag nametagBone) nametagBone.bind(nametag);
+    }
+
+    @Override
+    public Entity setNametag(String name, net.kyori.adventure.text.Component text) {
+        Entity display = new Entity(net.minestom.server.entity.EntityType.TEXT_DISPLAY);
+        var meta = (net.minestom.server.entity.metadata.display.TextDisplayMeta) display.getEntityMeta();
+        meta.setText(text);
+        meta.setBillboardRenderConstraints(net.minestom.server.entity.metadata.display.AbstractDisplayMeta.BillboardConstraints.CENTER);
+        display.setNoGravity(true);
+        if (getInstance() != null) display.setInstance(getInstance(), getPosition());
+        bindNametag(name, display);
+        return display;
     }
 
     @Override
